--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,29 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# git rm --cached <path> to removed cached files.
 
 # dependencies
-/node_modules
+node_modules
+lib
 /.pnp
 .pnp.js
-.yarn/install-state.gz
+.pnpm-store/**
 
-# testing
-/coverage
 
 # next.js
-/.next/
-/out/
-
-# production
-/build
+.next
+.idea
 
 # misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/.vscode/settings.json
+!/.vscode/extensions.json
+../.idea
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
 
 # vercel
 .vercel
@@ -34,3 +31,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# css
+global.css
+global.css.map
+
+# Optional eslint cache
+.eslintcache
+
+#service workers
+asset-manifest.json
+sw.js
