--- a/service/package.json
+++ b/service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "words",
+  "name": "@words/app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,6 +26,11 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "@words/eslint-config-base": "file:../packages/eslint-config/base",
+    "@words/eslint-config-browser-env": "file:../packages/eslint-config/browser-env",
+    "@words/eslint-config-react": "file:../packages/eslint-config/react",
+    "@words/prettier-config": "file:../packages/prettier-config",
+    "eslint-plugin-words-app-styleguide": "file:../packages/eslint-plugin-interval-app-styleguide"
   }
 }
