--- a/packages/eslint-config/browser-env/package.json
+++ b/packages/eslint-config/browser-env/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@words/eslint-config-browser-env",
   "version": "1.0.0",
-  "description": "Browser environment eslint configuration for interval app",
+  "description": "Browser environment eslint configuration for words app",
   "main": "index.json",
   "author": "Fabian Hinz",
   "license": "ISC",
@@ -9,9 +9,9 @@
   },
   "peerDependencies": {
     "@words/eslint-config-base": "workspace:*",
-    "eslint-plugin-compat": "4.0.2",
-    "eslint-plugin-no-unsanitized": "4.0.1",
-    "eslint-plugin-functional": "6.0.0",
+    "eslint-plugin-compat": "5.0.0",
+    "eslint-plugin-no-unsanitized": "4.0.2",
+    "eslint-plugin-functional": "6.6.0",
     "typescript": "5.5.3"
   }
 }
