--- a/packages/eslint-config/base/package.json
+++ b/packages/eslint-config/base/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@words/eslint-config-base",
   "version": "1.0.0",
-  "description": "Base eslint configuration for interval app",
+  "description": "Base eslint configuration for words app",
   "main": "index.json",
   "author": "Fabian Hinz",
   "license": "ISC",
   "dependencies": {},
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "7.2.0",
-    "eslint": "9.6.0",
+    "@typescript-eslint/eslint-plugin": "7.15.0",
+    "@typescript-eslint/parser": "7.15.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-security": "1.7.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.4.0",
+    "eslint-plugin-security": "3.0.1",
     "eslint-import-resolver-typescript": "3.6.1",
-    "prettier": "3.1.0",
+    "prettier": "3.3.2",
     "typescript": "5.5.3"
   }
 }
