--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
@@ -23,19 +24,22 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
     "@typescript-eslint/eslint-plugin": "7.15.0",
     "@typescript-eslint/parser": "7.15.0",
+    "@words/eslint-config-base": "file:../packages/eslint-config/base",
+    "@words/eslint-config-browser-env": "file:../packages/eslint-config/browser-env",
+    "@words/eslint-config-react": "file:../packages/eslint-config/react",
+    "@words/prettier-config": "file:../packages/prettier-config",
+    "@words/tailwind-config": "file:../packages/tailwind-config",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-compat": "5.0.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-functional": "6.6.0",
     "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-no-relative-import-paths": "1.5.3",
     "eslint-plugin-no-unsanitized": "4.0.2",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -43,10 +47,9 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-redux": "^4.1.0",
     "eslint-plugin-security": "3.0.1",
-    "@words/eslint-config-base": "file:../packages/eslint-config/base",
-    "@words/eslint-config-browser-env": "file:../packages/eslint-config/browser-env",
-    "@words/eslint-config-react": "file:../packages/eslint-config/react",
-    "@words/prettier-config": "file:../packages/prettier-config",
-    "eslint-plugin-words-app-styleguide": "file:../packages/eslint-plugin-words-app-styleguide"
+    "eslint-plugin-words-app-styleguide": "file:../packages/eslint-plugin-words-app-styleguide",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   }
 }
