--- a/service/package.json
+++ b/service/package.json
@@ -10,10 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
+    "negotiator": "^0.6.3",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,8 +26,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.14.9",
-    "@types/react": "^18.3.3",
+    "@types/react": "18.2.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "7.15.0",
     "@typescript-eslint/parser": "7.15.0",
