--- a/service/package.json
+++ b/service/package.json
@@ -10,58 +10,57 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "class-variance-authority": "^0.7.0",
+    "@formatjs/intl-localematcher": "^0.5.9",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.400.0",
-    "negotiator": "^0.6.3",
-    "next": "14.2.4",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "tailwind-merge": "^2.3.0",
+    "lucide-react": "^0.469.0",
+    "negotiator": "^1.0.0",
+    "next": "15.1.3",
+    "next-themes": "^0.4.4",
+    "react": "19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20.14.9",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@typescript-eslint/eslint-plugin": "8.18.2",
+    "@typescript-eslint/parser": "8.18.2",
     "@words/eslint-config-base": "file:../packages/eslint-config/base",
     "@words/eslint-config-browser-env": "file:../packages/eslint-config/browser-env",
     "@words/eslint-config-react": "file:../packages/eslint-config/react",
     "@words/prettier-config": "file:../packages/prettier-config",
     "@words/tailwind-config": "file:../packages/tailwind-config",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-compat": "5.0.0",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-compat": "6.0.2",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-functional": "6.6.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-no-relative-import-paths": "1.5.3",
-    "eslint-plugin-no-unsanitized": "4.0.2",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "7.34.3",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-redux": "^4.1.0",
+    "eslint-plugin-functional": "7.2.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-no-relative-import-paths": "1.5.5",
+    "eslint-plugin-no-unsanitized": "4.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "7.37.3",
+    "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-security": "3.0.1",
     "eslint-plugin-words-app-styleguide": "file:../packages/eslint-plugin-words-app-styleguide",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
