--- a/packages/eslint-config/base/package.json
+++ b/packages/eslint-config/base/package.json
@@ -7,17 +7,17 @@
   "license": "ISC",
   "dependencies": {},
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "@typescript-eslint/eslint-plugin": "8.18.2",
+    "@typescript-eslint/parser": "8.18.2",
+    "eslint": "9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.4.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-security": "3.0.1",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "prettier": "3.3.2",
-    "typescript": "5.5.3"
+    "eslint-import-resolver-typescript": "3.7.0",
+    "prettier": "3.4.2",
+    "typescript": "5.7.2"
   }
 }
