--- a/packages/eslint-config/base/package.json
+++ b/packages/eslint-config/base/package.json
@@ -1,22 +1,28 @@
 {
   "name": "@words/eslint-config-base",
   "version": "1.0.0",
+  "type": "module",
   "description": "Base eslint configuration for words app",
-  "main": "index.json",
+  "main": "eslint.config.js",
   "author": "Fabian Hinz",
   "license": "ISC",
-  "dependencies": {},
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "9.17.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0"
+  },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
     "eslint": "9.17.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-security": "3.0.1",
-    "eslint-import-resolver-typescript": "3.7.0",
     "prettier": "3.4.2",
     "typescript": "5.7.2"
   }
