--- a/service/package.json
+++ b/service/package.json
@@ -2,6 +2,7 @@
   "name": "@words/app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "prettier": "@words/prettier-config",
   "scripts": {
     "dev": "next dev",
@@ -10,7 +11,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "tailwindcss-animate": "^1.0.7",
     "@formatjs/intl-localematcher": "^0.5.9",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "globals": "^15.14.0",
     "lucide-react": "^0.469.0",
     "negotiator": "^1.0.0",
     "next": "15.1.3",
@@ -29,9 +30,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.10.2",
     "@types/react": "19.0.2",
