--- a/packages/eslint-config/base/package.json
+++ b/packages/eslint-config/base/package.json
@@ -6,16 +6,13 @@
   "main": "eslint.config.js",
   "author": "Fabian Hinz",
   "license": "ISC",
-  "devDependencies": {
+  "peerDependencies": {
     "@eslint/js": "^9.17.0",
     "eslint": "9.17.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0"
-  },
-  "peerDependencies": {
+    "typescript-eslint": "^8.19.0",
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
-    "eslint": "9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-filenames": "1.3.2",
@@ -24,6 +21,6 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-security": "3.0.1",
     "prettier": "3.4.2",
-    "typescript": "5.7.2"
+    "@stylistic/eslint-plugin-ts": "^2.12.1"
   }
 }
