--- a/packages/eslint-config/react/package.json
+++ b/packages/eslint-config/react/package.json
@@ -6,12 +6,11 @@
   "main": "eslint.config.js",
   "author": "Fabian Hinz",
   "license": "ISC",
-  "dependencies": {
-    "globals": "^15.14.0"
-  },
   "peerDependencies": {
     "@words/eslint-config-browser-env": "workspace:*",
+    "globals": "^15.14.0",
     "eslint-plugin-react": "7.37.3",
-    "eslint-plugin-react-hooks": "5.1.0"
+    "eslint-plugin-react-hooks": "5.1.0",
+    "@stylistic/eslint-plugin-jsx": "^2.12.1"
   }
 }
