--- a/service/package.json
+++ b/service/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@stylistic/eslint-plugin-jsx": "^2.12.1",
+    "@stylistic/eslint-plugin-ts": "^2.12.1",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.10.2",
     "@types/react": "19.0.2",
@@ -63,6 +65,7 @@
     "eslint-plugin-security": "3.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0"
   }
 }
