--- a/packages/eslint-config/react/package.json
+++ b/packages/eslint-config/react/package.json
@@ -11,6 +11,7 @@
     "globals": "^15.14.0",
     "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-hooks": "5.1.0",
-    "@stylistic/eslint-plugin-jsx": "^2.12.1"
+    "@stylistic/eslint-plugin-jsx": "^2.12.1",
+    "@eslint/compat": "^1.2.4"
   }
 }
