--- a/service/package.json
+++ b/service/package.json
@@ -41,38 +41,15 @@
     "zod": "3.24.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
-    "@eslint/js": "^9.17.0",
-    "@stylistic/eslint-plugin-jsx": "^2.12.1",
-    "@stylistic/eslint-plugin-ts": "^2.12.1",
+    "@biomejs/biome": "1.9.4",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.10.2",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "8.18.2",
-    "@typescript-eslint/parser": "8.18.2",
-    "@words/eslint-config-base": "file:../packages/eslint-config/base",
-    "@words/eslint-config-browser-env": "file:../packages/eslint-config/browser-env",
-    "@words/eslint-config-react": "file:../packages/eslint-config/react",
-    "@words/prettier-config": "file:../packages/prettier-config",
+    "@words/biome-config": "file:../packages/biome-config",
     "@words/tailwind-config": "file:../packages/tailwind-config",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-compat": "6.0.2",
-    "eslint-plugin-functional": "7.2.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-no-relative-import-paths": "1.5.5",
-    "eslint-plugin-no-unsanitized": "4.1.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-react": "7.37.3",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-security": "3.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript": "^5.7.2"
   }
 }
