--- a/service/package.json
+++ b/service/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev && NODE_ENV=development",
     "build": "next build && NODE_ENV=production",
     "start": "next start && NODE_ENV=production",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate_open_api_types": "npx openapi-typescript http://localhost:8080/api-docs/openapi.json -o ./src/generated/openApiTypes.ts --export-type"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.9",
@@ -32,6 +33,8 @@
     "negotiator": "^1.0.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
+    "openapi-fetch": "^0.13.4",
+    "openapi-react-query": "^0.3.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -48,6 +51,7 @@
     "@types/react-dom": "18.0.11",
     "@words/biome-config": "file:../packages/biome-config",
     "@words/tailwind-config": "file:../packages/tailwind-config",
+    "openapi-typescript": "^7.6.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
