--- a/service/package.json
+++ b/service/package.json
@@ -34,17 +34,18 @@
     "globals": "^15.14.0",
     "lucide-react": "^0.469.0",
     "negotiator": "^1.0.0",
-    "next": "15.2.4",
+    "next": "15.3.5",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
     "openapi-fetch": "^0.13.4",
     "openapi-react-query": "^0.3.0",
-    "react": "19.1.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.24.1"
+    "zod": "3.25.75"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
