--- a/service/package.json
+++ b/service/package.json
@@ -27,22 +27,23 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "globals": "^15.14.0",
-    "lucide-react": "^0.469.0",
+    "globals": "^16.3.0",
+    "lucide-react": "^0.525.0",
     "negotiator": "^1.0.0",
     "next": "15.3.5",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
-    "openapi-fetch": "^0.13.4",
-    "openapi-react-query": "^0.3.0",
+    "openapi-fetch": "^0.14.0",
+    "openapi-react-query": "^0.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
-    "tailwind-merge": "^2.6.0",
+    "react-hook-form": "^7.60.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "3.25.75"
@@ -57,7 +58,7 @@
     "@words/tailwind-config": "file:../packages/tailwind-config",
     "openapi-typescript": "^7.6.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2"
   }
 }
