--- a/service/components.json
+++ b/service/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.ts",
+    "config": "",
     "css": "src/styles/globals.css",
     "baseColor": "gray",
     "cssVariables": true,
@@ -13,5 +13,6 @@
   "aliases": {
     "components": "src/components",
     "utils": "src/lib/shadcn/shadcnHelpers"
-  }
+  },
+  "iconLibrary": "lucide"
 }
