--- a/service/package.json
+++ b/service/package.json
@@ -55,10 +55,10 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "@words/biome-config": "file:../packages/biome-config",
-    "@words/tailwind-config": "file:../packages/tailwind-config",
     "openapi-typescript": "^7.6.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.7.2"
   }
 }
