add dependencies for OpenAI and ExampleSentencesModelService

--- a/services/inngest/.env.example
+++ b/services/inngest/.env.example
@@ -13,3 +13,5 @@ INNGEST_SIGNING_KEY=local
 INNGEST_SIGNING_KEY_FALLBACK=local
 INNGEST_SERVE_HOST=http://host.docker.internal:8086
 
+OPENAI_API_KEY=test
+
