--- a/services/inngest/package.json
+++ b/services/inngest/package.json
@@ -17,7 +17,6 @@
     },
     "author": "Fabian Hinz",
     "dependencies": {
-        "tsx": "^4.20.6",
         "@fastify/awilix": "^8.0.0",
         "@fastify/basic-auth": "^6.2.0",
         "@fastify/cors": "^11.1.0",
@@ -31,9 +30,11 @@
         "fastify-raw-body": "^5.0.0",
         "fastify-type-provider-zod": "^4.0.2",
         "inngest": "^3.40.1",
+        "openai": "^6.7.0",
+        "pino": "^10.1.0",
+        "tsx": "^4.20.6",
         "uuid": "^11.1.0",
-        "zod": "^3.24.4",
-        "pino": "^10.1.0"
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
