--- a/services/inngest/package.json
+++ b/services/inngest/package.json
@@ -39,6 +39,7 @@
         "@types/node": "^20.0.0",
         "pino-pretty": "^13.0.0",
         "prisma": "^6.7.0",
-        "tsc-alias": "^1.8.8"
-    }
+        "tsc-alias": "^1.8.8",
+        "@words/biome-config": "file:../../packages/biome-config"
+      }
 }
