--- a/services/web/package.json
+++ b/services/web/package.json
@@ -31,21 +31,21 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/postcss": "^4.1.11",
-    "@tanstack/react-query": "^5.64.1",
-    "@tanstack/react-table": "^8.21.2",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "globals": "^16.3.0",
     "lucide-react": "^0.525.0",
     "negotiator": "^1.0.0",
-    "next": "15.3.5",
+    "next": "^16.1.1",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
-    "openapi-fetch": "^0.14.0",
-    "openapi-react-query": "^0.5.0",
-    "react": "^19.1.0",
+    "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
+    "react": "^19.2.3",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.69.0",
     "shadcn": "^3.6.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -62,7 +62,7 @@
     "@words/biome-config": "file:../../packages/biome-config",
     "openapi-typescript": "^7.6.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.7.2"
   }
