--- a/services/web/package.json
+++ b/services/web/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.90.19",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.17.23",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
