add reverse mode

--- a/services/web/package.json
+++ b/services/web/package.json
@@ -13,7 +13,6 @@
   },
   "author": "Fabian Hinz",
   "dependencies": {
-    "motion": "12.6.3",
     "@formatjs/intl-localematcher": "^0.5.9",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -32,19 +31,21 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.90.19",
-    "lodash": "^4.17.21",
-    "@types/lodash": "^4.17.23",
     "@tanstack/react-table": "^8.21.3",
+    "@types/lodash": "^4.17.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "globals": "^16.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "motion": "12.6.3",
     "negotiator": "^1.0.0",
     "next": "^16.1.1",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
     "openapi-fetch": "^0.15.0",
     "openapi-react-query": "^0.5.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.69.0",
