--- a/services/web/package.json
+++ b/services/web/package.json
@@ -6,7 +6,7 @@
   "prettier": "@words/prettier-config",
   "scripts": {
     "dev": "next dev && NODE_ENV=development",
-    "build": "next build && NODE_ENV=production",
+    "build": "next build --no-turbopack",
     "start": "next start && NODE_ENV=production",
     "lint": "next lint",
     "open_api:generate": "npx openapi-typescript http://localhost:8080/api-docs/openapi.json -o src/generated/openApiTypes.ts --export-type"
