--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "packages:force-node-modules-sync": "sudo find node_modules/.pnpm -name 'file+*' -type d -prune -print -exec rm -rf '{}' + && pnpm install",
     "remove:node-modules": "sudo find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' +",
-    "dev": "docker compose down && docker compose up -d && pnpm -r --parallel --filter @words/inngest --filter @words/web run dev"
+    "dev": "docker compose down && docker compose up -d && turbo dev",
+    "build": "turbo build",
+    "lint": "turbo lint"
+  },
+  "devDependencies": {
+    "turbo": "^2"
   }
 }
