--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@words/root",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.12.4",
   "scripts": {
     "packages:force-node-modules-sync": "sudo find node_modules/.pnpm -name 'file+*' -type d -prune -print -exec rm -rf '{}' + && pnpm install",
     "remove:node-modules": "sudo find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' +",
