build inngest service to dockerhub

--- a/.github/workflows/docker-publish-web.yml
+++ b/.github/workflows/docker-publish-web.yml
@@ -9,7 +9,7 @@ on:
       - 'packages/**'
       - 'pnpm-lock.yaml'
       - 'turbo.json'
-      - '.github/workflows/docker-publish.yml'
+      - 'docker-publish-words.yml'
       - '.github/workflows/docker-build-template.yml'
   workflow_dispatch:
     inputs:
