--- a/services/inngest/package.json
+++ b/services/inngest/package.json
@@ -38,6 +38,7 @@
     "devDependencies": {
         "@types/node": "^20.0.0",
         "pino-pretty": "^13.0.0",
+        "@biomejs/biome": "1.9.4",
         "prisma": "^6.7.0",
         "tsc-alias": "^1.8.8",
         "@words/biome-config": "file:../../packages/biome-config"
