--- a/services/inngest/package.json
+++ b/services/inngest/package.json
@@ -7,8 +7,8 @@
     "private": true,
     "rootDir": "src",
     "scripts": {
-        "start:api": "node ./dist/src/index.js",
-        "build": "rm -rf ./dist/* && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+        "start:api": "node ./dist/index.js",
+        "build": "rm -rf ./dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
         "lint": "biome lint",
         "dev": "tsx watch src/index.ts",
         "prisma:pull": "npx prisma db pull",
