run prisma generate

--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -72,6 +72,7 @@ RUN turbo build --filter=@words/web
 # ============================================================================
 FROM node:22-alpine AS runner
 
+RUN apk add --no-cache wget
 
 WORKDIR /app
 
