--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -91,6 +91,7 @@ services:
       SERVICE_TOKEN_SECRET_KEY: ${SERVICE_TOKEN_SECRET_KEY:?required}
       SERVICE_TOKEN_DURATION_SEC: ${SERVICE_TOKEN_DURATION_SEC:-1800}
       SERVICE_ALLOW_ORIGIN: ${SERVICE_ALLOW_ORIGIN:?required}
+      SERVICE_COOKIE_DOMAIN: ${SERVICE_COOKIE_DOMAIN}
       SERVICE_PORT: "8080"
       SERVICE_WEB_FOLDER: "/app/web-folder/"
     healthcheck:
