--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.12.4",
+  "devDependencies": {
+    "turbo": "^2.5.4"
+  },
   "scripts": {
     "packages:force-node-modules-sync": "sudo find node_modules/.pnpm -name 'file+*' -type d -prune -print -exec rm -rf '{}' + && pnpm install",
     "remove:node-modules": "sudo find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' +",
-    "dev": "docker compose down && docker compose up -d && turbo dev",
-    "build": "turbo build",
-    "lint": "turbo lint"
+    "dev": "docker compose down && docker compose up -d && pnpm exec turbo dev",
+    "build": "pnpm exec turbo build",
+    "lint": "pnpm exec turbo lint"
   }
 }
