--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "packages:force-node-modules-sync": "sudo find node_modules/.pnpm -name 'file+*' -type d -prune -print -exec rm -rf '{}' + && pnpm install",
     "remove:node-modules": "sudo find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' +",
-    "dev": "docker compose down && docker compose up -d && pnpm exec turbo dev",
+    "dev": "docker compose down && docker compose up -d && pnpm exec turbo dev --filter='!@words/root'",
     "build": "pnpm exec turbo build",
     "lint": "pnpm exec turbo lint"
   }
